#232 - Add Schema Classification